--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMeBa.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMeBa.cshtml
@@ -99,7 +99,7 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr value="@item.ID" , id="row+@item.ID">
+                            <tr value="@item.ID">
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Datum)
                                 </td>
@@ -225,21 +225,22 @@
 
 
             var rowLength = table.rows.length;
-            for (var i = 0; i < rowLength; i += 1) {
+        for (var i = 0; i < rowLength; i += 1) {
+
 
                 var row = table.rows[i];
                 var id = row.getAttribute('value'); //id
                 var boolValue = $('#' + id).text(); //get bool value
+                var checkbox = $("#eintragen_" + id);
 
                 if (boolValue == 'True') {
-                    $("#eintragen_" + id).prop("checked", true);
-                    $(row).css("background-color", "#90ee90");
+                    checkbox.prop("checked", true);
+                    $(row).css("background-color", "#90ee90"); //green
                 }
-                if (boolValue == 'False') {
-                    $("#eintragen_" + id).prop("checked", false)
-                    $(row).css("background-color", "#ffcccb");
+                else if (boolValue == 'False') {
+                    checkbox.prop("checked", false)
+                    $(row).css("background-color", "#ffcccb"); //red
                 }
-            }
 
 
             $(document).ready(function () {
@@ -248,6 +249,7 @@
                 var table = $('#myTable').DataTable(
                     {
                         dom: 'Bfrtlip',
+                        scrollX: true, // make responsive
                         buttons: [
                             {
                                 extend: 'copyHtml5',
