--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -21,7 +21,6 @@
                     </div>
                     <div class="col-xs-2">
                         <label>Einträge bis:</label>
-
                         <input class="form-control text-box single-line" id="max" name="Datum" type="date">
                     </div>
                     <div class="col-xs-2">
@@ -84,11 +83,9 @@
                                 @Html.DisplayNameFor(model => model.Auswertung)
                             </th>
                              -->
-
                             <th>
                                 @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
                             </th>
-
                             <th>
 
                             </th>
@@ -133,11 +130,9 @@
                                     @Html.DisplayFor(modelItem => item.InDirStunden)
                                 </td>
                                 <td>
-
                                     @Html.DisplayFor(modelItem => item.Bemerkung)
                                 </td>
                                 <td>
-
                                     <input type="checkbox" href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
                                 </td>
                                 <!--
@@ -146,9 +141,7 @@
                                 </td>
                                 -->
                                 <td>
-
                                     <a href="~/MitarbeiterInSchicht/Edit/@item.ID"><span style="color:dimgrey" class="glyphicon glyphicon-edit"></span></a>
-
                                     |
                                     <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
                                     <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey" class="glyphicon glyphicon-remove"></span></a>
@@ -224,17 +217,15 @@
             var rowLength = table.rows.length;
             for (var i = 0; i < rowLength; i += 1) {
 
-                var row = table.rows[i];
-                var id = row.getAttribute('value'); //id
                 var boolValue = $('#' + id).text(); //get bool value
+                var checkbox = $("#eintragen_" + id);
 
                 if (boolValue == 'True') {
-                    $("#eintragen_" + id).prop("checked", true);
+                    checkbox.prop("checked", true);
                     $(row).css("background-color", "#90ee90"); //green
                 }
-                if (boolValue == 'False') {
-                    $("#eintragen_" + id).prop("checked", false)
-
+                else if (boolValue == 'False') {
+                    checkbox.prop("checked", false)
                     $(row).css("background-color", "#ffcccb"); //red
                 }
             }
@@ -244,6 +235,7 @@
                 var table = $('#myTable').DataTable(
                     {
                         dom: 'Bfrtlip',
+                        scrollX: true, // make responsive
                         buttons: [
                             {
                                 extend: 'copyHtml5',
