--- a/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
@@ -13,7 +13,7 @@
     <link href="~/fonts/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
-        <div class="wrapper">
+        <div class="wrapper" style="background-color:#ECEFF4">
             <div id="skinn" class="hold-transition skin-blue sidebar-mini">
                 <!-- Main Header -->
                 <header class="main-header">
@@ -34,14 +34,11 @@
                         <!-- Navbar Right Menu -->
                         <div class="navbar-custom-menu">
                             <ul class="nav navbar-nav">
-
                                 <!-- User Account Menu -->
                                 <li class="dropdown user user-menu">
                                     <!-- Menu Toggle Button -->
                                     <a href="/Zugriffsrechte/Login"><span class="glyphicon glyphicon-log-in"></span></a>
-
                                 </li>
-
                             </ul>
                         </div>
                     </nav>
@@ -120,9 +117,7 @@
                        $("#skinn").addClass((arr[idx]));
                        $("#cw").css("background-image", "linear-gradient(45deg, " + getRandomColor() +" ,  " + getRandomColor() +"," + getRandomColor()+")");
 
-
                     });         */
-                    
                 </script>
             </div>
             <!-- Main Footer -->
