--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model ZeiterfassungPierburg.Models.ViewModels.Dashboard
 
-@if (Convert.ToInt32(Session["AccessLayer"]) == null || Convert.ToInt32(Session["AccessLayer"]) == 0)
+@if (Convert.ToInt32(Session["AccessLayer"]) == 0)
 {
     Layout = "~/Views/Shared/_LayoutPublic.cshtml";
 }
 
 <link href="~/Content/Chart.css" rel="stylesheet" />
 
-
 <!-- Typewriter for fun only -->
 <link href="~/Content/TextAnimation.css" rel="stylesheet" />
-
 
 <!-- Content Header (Page header) -->
 <section class="content-header">
@@ -22,7 +20,7 @@
                 <div class="typewriter">
                     <div class="typewriter-text">
                         <p id='datumsausgabe'>
-                            Herzlich willkommen, @Session["UserName"].ToString()!        <br />
+                            Herzlich willkommen, @Session["UserName"].ToString()! <br />
                         </p>
                     </div>
                 </div>
@@ -78,10 +76,10 @@
                             <p>Fertigungsteile</p>
                         </div>
 
-                        <a href="~/Fertigungsteil/Index" class="small-box-footer" >zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
+                        <a href="~/Fertigungsteil/Index" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                    <!-- ./col -->
+                <!-- ./col -->
                 <div class="col-lg-3 col-xs-6">
                     <!-- small box -->
                     <div class="small-box bg-red">
@@ -124,23 +122,21 @@
 
     <div class="col-lg-6 col-xs-6">
 
-
         <div class="box-footer text-black">
             <h4>Produktivität der letzten 12 Monate</h4>
-
             <canvas id="bar-chart" width="700" height="330"></canvas>
         </div>
 
-
+        <!-- Here should come the Promon app - not sure if it will work -->
         <div class="box-footer text-black">
             <h4>Placeholder for Pronom</h4>
 
             <div class="row">
-                <iframe src="https://de.wikipedia.org/wiki/Rheinmetall_Automotive" width="100%" height="400" name="SELFHTML_in_a_box"></iframe>
+                <iframe src="https://de.wikipedia.org/wiki/Rheinmetall_Automotive" width="100%" height="400"></iframe>
             </div>
         </div>
     </div>
-
+    <!-- Stücke counting box -->
     <div class="col-lg-3 col-xs-6" id="stückFrame">
         <div class="box-footer text-black">
             <h4>Statistik der Stücke:</h4>
@@ -179,20 +175,14 @@
             </div>
         </div>
     </div>
-
 </div>
-
 </section>
 
 @section scripts{
-
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="~/Scripts/Chart.js"></script>
-
     <script>
 
         var monthsDictionary = @Html.Raw(Json.Encode(ViewBag.ProduktivitätLast12Months));
-
         var months = [];
         var values = [];
 
@@ -255,24 +245,16 @@
             m = n.getMonth() + 1;
             d = n.getDate();
 
-
             var a = weekday[n.getDay()];
 
             document.getElementById("day"+i).innerHTML = a +", "+ d + "." + m + ".     ";
         }
-        /*
-            var dateString = "12/22/2017";
-            var date1 = new Date(dateString);
-            var daysPrior = 28;
-            date1.setDate(date1.getDate() - daysPrior));
-        print(date1.toISOString());
-        */
-
             var html = '';
                             var dictionary = @Html.Raw(Json.Encode(ViewBag.ProduktivitätBerechnungProBandLastMonth));
                             for(var key in dictionary ){
                                 var value = dictionary[key];
 
+                            // if a number gets returned, show the number and round it off
 
                                 if (!Number.isNaN(value)) {
 
@@ -298,10 +280,7 @@
             var p = document.getElementById("productivity");
             p.innerHTML = html;
 
-
-
             // Maschinen Produktivität Berechnung
-
             var htmlMaschinen = '';
             var dictionaryMaschinen = @Html.Raw(Json.Encode(ViewBag.ProduktivitätBerechnungProMaschineLastMonth));
 
@@ -310,16 +289,16 @@
 
 
                 if (!Number.isNaN(value)) {
-
+                    // if a number gets returned, show the number and round it off
                     htmlMaschinen = htmlMaschinen + ` <div class="clearfix">
                             <span class="pull-left">`+ key + `</span>
-                            <small class="pull-right">`+ value.toFixed(2) + `%</small>
+                            <small class="pull-right">`+ value.toFixed(2) + `%</small> 
                         </div>
                         <div class="progress xs">
                             <div class="progress-bar progress-bar-green" style="width: `+ value + `%;"></div>
                         </div>`;
                 }
-                else {
+                else { //no number gets returned
                     htmlMaschinen = htmlMaschinen + ` <div class="clearfix">
                             <span class="pull-left">`+ key + `</span>
                             <small class="pull-right">keine Einträge</small>
@@ -344,9 +323,7 @@
                     'Oktober', 'November', 'Dezember'],
                 text;
             text = 'Heute ist ' + wochentag[tagZahl] + ', der ' + tag + '. ' + monat[monatZahl] + '.';
-
             document.getElementById('datumsausgabe').textContent += text;
-
         }
         getDate();
     </script>
