--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -9,21 +9,22 @@
     <div class="box-header with-border">
         <div class="box">
             <div class="box-header with-border">
-                <h3>Übersicht der Mitarbeiter in Schichten in der Montage im letzten Monat</h3>
+                <h3>Übersicht der Mitarbeiter in Schichten in Montage im letzten Monat</h3>
                 <h4>
                     Für ältere Einträge besuche das @Html.ActionLink("Archiv", "ArchivMontage", "MitarbeiterInSchicht").
                 </h4>
 
                 <div class="row row-list" style="padding-bottom: 25px; padding-top: 15px">
-                    <div class="col-xs-2">
+                    <div class="col-lg-3 col-xs-12">
                         <label>Einträge von:</label>
                         <input class="form-control text-box single-line" id="min" name="Datum" type="date">
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-3 col-xs-12">
                         <label>Einträge bis:</label>
+
                         <input class="form-control text-box single-line" id="max" name="Datum" type="date">
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-lg-3 col-xs-12">
                         <label>Wähle die Schicht aus:</label>
 
                         <select class="form-control text-box single-line" id="schicht">
@@ -33,68 +34,67 @@
                             <option value="3">Nacht</option>
                         </select>
                     </div>
-                    <div class="col-xs-2">
-                        <label>Wähle das Band aus:</label>
+                    <div class="col-lg-3 col-xs-12">
+                        <label>Wähle das aus:</label>
                         @Html.Raw((String)ViewBag.AnlageFilter)
                     </div>
                 </div>
-
-                <table id="myTable" class="table table-striped table-bordered" style="text-align:center">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Datum)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Art)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Anlage)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Personalnummer)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Kostenstelle)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.SAPAPNr)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ZeichenNr)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Stück)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.DirStunden)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.InDirStunden)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Bemerkung)
-                            </th>
-                            <!--
-                            <th>
-                                @Html.DisplayNameFor(model => model.Auswertung)
-                            </th>
-                             -->
-                            <th>
-                                @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
-                            </th>
-                            <th>
-
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr value="@item.ID">
+                <div style="height:100%">
+                    <table id="myTable" class="table table-striped table-bordered" style="text-align:center; width:100%">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Datum)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Art)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Anlage)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Personalnummer)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Kostenstelle)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.SAPAPNr)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.ZeichenNr)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Stück)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.DirStunden)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.InDirStunden)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Bemerkung)
+                                </th>
+                                <!--
+    <th>
+        @Html.DisplayNameFor(model => model.Auswertung)
+    </th>
+     -->
+                                <th>
+                                    @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
+                                </th>
+                                <th>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                            <tr value="@item.ID" istEingetragen="@item.IstInSAPEingetragen">
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Datum)
                                 </td>
@@ -102,12 +102,11 @@
                                     @Html.DisplayFor(modelItem => item.Art)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Anlage)
+                                    @Html.ActionLink(item.Anlage, "Edit", "Produktionsanlage", new { id = item.ProduktionsanlageID }, new { @style = "color:black" })
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
+                                    @Html.ActionLink(item.Name, "Edit", "Mitarbeiter", new { id = item.MitarbeiterID }, new { @style = "color:black" })
                                 </td>
-
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Personalnummer)
                                 </td>
@@ -118,7 +117,7 @@
                                     @Html.DisplayFor(modelItem => item.SAPAPNr)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                    @Html.ActionLink(item.ZeichenNr, "Edit", "Fertigungsteil", new { id = item.FertigungsteilID }, new { @style = "color:black" })
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Stück)
@@ -130,28 +129,33 @@
                                     @Html.DisplayFor(modelItem => item.InDirStunden)
                                 </td>
                                 <td>
+
                                     @Html.DisplayFor(modelItem => item.Bemerkung)
                                 </td>
                                 <td>
                                     <input type="checkbox" href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
                                 </td>
                                 <!--
+    <td>
+        @Html.DisplayFor(modelItem => item.Auswertung)%
+    </td>
+    -->
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Auswertung)%
-                                </td>
-                                -->
-                                <td>
+
                                     <a href="~/MitarbeiterInSchicht/Edit/@item.ID"><span style="color:dimgrey" class="glyphicon glyphicon-edit"></span></a>
-                                    |
+
+
                                     <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
                                     <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey" class="glyphicon glyphicon-remove"></span></a>
 
-                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen because the boolen value can't be passed as attribute (dunno why)-->
+                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen in a text form because the boolean value can't be passed as attribute (dunno why)-->
                                 </td>
+
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                            }
+                        </tbody>
+                    </table>
+                </div>
                 @ViewBag.Message
 
                 <!--
@@ -188,9 +192,9 @@
 
         jQuery.fn.dataTableExt.afnFiltering.push(
             function (oSettings, aData, iDataIndex) {
-                var dateColumn = 0;
-                var schichtColumn = 1;
-                var anlageColumn = 2; //which column
+                var dateColumn = 0; // first column
+                var schichtColumn = 1; // second
+                var anlageColumn = 2; //third column
 
                 var iMin = Date.parse(document.getElementById('min').value);
                 var iMax = Date.parse(document.getElementById('max').value);
@@ -202,40 +206,42 @@
                 var schicht = $(document.getElementById('schicht')).children("option:selected").val(); //selected schicht
 
                 var anlageColumn = (aData[anlageColumn] == "-" ? 0 : aData[anlageColumn]);
-                var anlage = $(document.getElementById('anlageFilter')).children("option:selected").val(); // selected Machine/Band
+                var anlage = $(document.getElementById('anlageFilter')).children("option:selected").val(); // selected Maschine/Band
 
                 if ((iMin > iDate || iDate > iMax) || (schicht != schichtColumn && schicht != "") || (anlage != anlageColumn && anlage != "")) {
 
-                    return false; //don't render these rows if selected and now meeting the criteriea
+                    return false; //don't render these rows if selected and not meeting the criteriea
                 }
                 else return true;
             }
         )
 
             var table = document.getElementById('myTable');
-
+            // iterate through the whole table and change the color of the row according to the bool value of IstInSAPEingetragen
             var rowLength = table.rows.length;
             for (var i = 0; i < rowLength; i += 1) {
+
+                var row = table.rows[i];
+                var id = row.getAttribute('value'); //id
 
                 var boolValue = $('#' + id).text(); //get bool value
                 var checkbox = $("#eintragen_" + id);
 
                 if (boolValue == 'True') {
-                    checkbox.prop("checked", true);
+                    checkbox.prop("checked", true); // check the checkbox
                     $(row).css("background-color", "#90ee90"); //green
                 }
                 else if (boolValue == 'False') {
-                    checkbox.prop("checked", false)
+                    checkbox.prop("checked", false) // uncheck the checkbox
                     $(row).css("background-color", "#ffcccb"); //red
                 }
             }
-
+             // render the Table
             $(document).ready(function () {
 
                 var table = $('#myTable').DataTable(
                     {
                         dom: 'Bfrtlip',
-                        scrollX: true, // make responsive
                         buttons: [
                             {
                                 extend: 'copyHtml5',
@@ -265,17 +271,19 @@
                                     columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
                                 }
                             }
-                        ]
+                        ],
+                        "scrollX": false // allow scroll bar (posibly)
                     });
 
-                $('#min, #max, #schicht, #anlageFilter').change(function () {
+                $('#min, #max, #schicht, #anlageFilter').change(function () { //run the filters
                     table.draw();
                 });
         });
+        
+        var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
 
-             var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
-
-                $('[id^=eintragen_]').click(function () {
+                
+                $('[id^=eintragen_]').click(function () { //function for checkboxes, which ID start with eintragen_
 
                     var id = $(this).attr('value'); // get ID
                     var boolValue = $('#' + id).text(); //get bool value
@@ -285,20 +293,20 @@
 
                     $.getJSON(url, { istEingetragen: boolValue, id: id }, function (response) {
 
-                        if (response == 0) {
+                        if (response == 0) {  //response 0 -> failed, response 1 -> proceeded
                             alert('Das lief schief. Aktualisiere die Seite und versuche es erneut.')
                         }
                     });
 
-                    if (boolValue == 'True') {
-                        $(row).css("background-color", "#ffcccb");
-                        $('#' + id).text('False');
+                    if (boolValue == 'True') { 
+                        $(row).css("background-color", "#ffcccb"); //change the color of the row
+                        $('#' + id).text('False'); // change the text value of the hidden field istInSAPEingetragen
                     }
-                    else if (boolValue == 'False') {
-                        $(row).css("background-color", "#90ee90");
-                        $('#' + id).text('True');
+                    else if (boolValue == 'False') { 
+                        $(row).css("background-color", "#90ee90"); //change the color of the row
+                        $('#' + id).text('True'); // change the text value of the hidden field istInSAPEingetragen
                     }
-            });
+        });
     </script>
 
 }
