--- a/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
@@ -11,124 +11,145 @@
     <link href="~/Content/dist/css/AdminLTE.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/dist/css/skins/_all-skins.min.css">
     <link href="~/fonts/font-awesome.min.css" rel="stylesheet" />
+
+    <!-- change the style of the scrollbar - only for fun; works only in Chrome -->
+    <style>
+        /* width */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #ECEFF4;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #367FA8;
+        }
+            /* Handle on hover */
+            ::-webkit-scrollbar-thumb:hover {
+                background: #555;
+            }
+    </style>
 </head>
 <body>
-        <div class="wrapper" style="background-color:#ECEFF4">
-            <div id="skinn" class="hold-transition skin-blue sidebar-mini">
-                <!-- Main Header -->
-                <header class="main-header">
+    <div class="wrapper" style="background-color:#ECEFF4">
+        <div id="skinn" class="hold-transition skin-blue sidebar-mini">
+            <!-- Main Header -->
+            <header class="main-header">
 
-                    <!-- Logo -->
-                    <a href="~/" class="logo">
-                        <!-- mini logo for sidebar mini 50x50 pixels -->
-                        <span class="logo-mini"><b>P</b>BG</span>
-                        <!-- logo for regular state and mobile devices -->
-                        <span class="logo-lg"><b><img height="150" width="150" src="~/Content/dist/img/pierburg_logo.png" /></b></span>
-                    </a>
+                <!-- Logo -->
+                <a href="~/" class="logo">
+                    <!-- mini logo for sidebar mini 50x50 pixels -->
+                    <span class="logo-mini"><b>P</b>BG</span>
+                    <!-- logo for regular state and mobile devices -->
+                    <span class="logo-lg"><b><img height="150" width="150" src="~/Content/dist/img/pierburg_logo.png" /></b></span>
+                </a>
 
-                    <!-- Header Navbar -->
-                    <nav class="navbar navbar-static-top" role="navigation">
-                        <!-- Sidebar toggle button-->
-                        <div class="sidebar-toggle" data-toggle="push-menu"></div>
+                <!-- Header Navbar -->
+                <nav class="navbar navbar-static-top" role="navigation">
+                    <!-- Sidebar toggle button-->
+                    <div class="sidebar-toggle" data-toggle="push-menu"></div>
 
-                        <!-- Navbar Right Menu -->
-                        <div class="navbar-custom-menu">
-                            <ul class="nav navbar-nav">
-                                <!-- User Account Menu -->
-                                <li class="dropdown user user-menu">
-                                    <!-- Menu Toggle Button -->
-                                    <a href="/Zugriffsrechte/Login"><span class="glyphicon glyphicon-log-in"></span></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </header>
-                <!-- Left side column. contains the logo and sidebar -->
-                <aside class="main-sidebar">
-
-                    <!-- sidebar: style can be found in sidebar.less -->
-                    <section class="sidebar">
-                        <ul class="sidebar-menu" data-widget="tree">
-                            <li class="active treeview menu-open">
-                            <li class="treeview">
-                                <a href="#">
-                                    <i class="fa fa-upload" aria-hidden="true"></i>
-                                    <span>Neue Zeiterfassung</span>
-                                    <span class="pull-right-container">
-                                        <i class="fa fa-angle-left pull-right"></i>
-                                    </span>
-                                </a>
-                                <ul class="treeview-menu">
-                                    <li>
-                                        <a href="@Url.Action("Create", "Neuezeiterfassung")">
-                                            <i class="fa fa-cogs" aria-hidden="true"></i>
-                                            <span>Montage</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="@Url.Action("CreateMEBA", "Neuezeiterfassung")">
-                                            <i class="fa fa-cogs" aria-hidden="true"></i>
-                                            <span>MeBa</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                    <!-- Navbar Right Menu -->
+                    <div class="navbar-custom-menu">
+                        <ul class="nav navbar-nav">
+                            <!-- User Account Menu -->
+                            <li class="dropdown user user-menu">
+                                <!-- Menu Toggle Button -->
+                                <a href="/Zugriffsrechte/Login"><span class="glyphicon glyphicon-log-in"></span></a>
                             </li>
                         </ul>
+                    </div>
+                </nav>
+            </header>
+            <!-- Left side column. contains the logo and sidebar -->
+            <aside class="main-sidebar">
 
-                        <!-- /.sidebar-menu -->
-                    </section>
-                    <!-- /.sidebar -->
-                </aside>
-                <!-- Content Wrapper. Contains page content -->
-                <div id="cw" class="content-wrapper">
+                <!-- sidebar: style can be found in sidebar.less -->
+                <section class="sidebar">
+                    <ul class="sidebar-menu" data-widget="tree">
+                        <li class="active treeview menu-open">
+                        <li class="treeview">
+                            <a href="#">
+                                <i class="fa fa-upload" aria-hidden="true"></i>
+                                <span>Neue Zeiterfassung</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li>
+                                    <a href="@Url.Action("Create", "Neuezeiterfassung")">
+                                        <i class="fa fa-cogs" aria-hidden="true"></i>
+                                        <span>Montage</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("CreateMEBA", "Neuezeiterfassung")">
+                                        <i class="fa fa-cogs" aria-hidden="true"></i>
+                                        <span>MeBa</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
 
-                    @RenderBody()
+                    <!-- /.sidebar-menu -->
+                </section>
+                <!-- /.sidebar -->
+            </aside>
+            <!-- Content Wrapper. Contains page content -->
+            <div id="cw" class="content-wrapper">
 
-                </div>
+                @RenderBody()
 
-                @Scripts.Render("~/bundles/jquery")
-                @Scripts.Render("~/bundles/bootstrap")
-                <script src="~/Scripts/adminlte.js"></script>
-
-                @RenderSection("scripts", required: false)
-
-                <script>
-                       /*
-                    //For fun: generate random background color and skins
-                    
-                    var arr = ['skin-blue', 'skin-blue-light', 'skin-yellow', 'skin-yellow-light', 'skin-green',
-                        'skin-green-light', 'skin-purple', 'skin-purple-light', 'skin-red', 'skin-red-light',
-                        'skin-black', 'skin-black-light'];
-
-                    var idx = Math.floor(Math.random() * arr.length);
-
-                    function getRandomColor() {
-                        var letters = '0123456789ABCDEF';
-                        var color = '#';
-                        for (var i = 0; i < 6; i++) {
-                            color += letters[Math.floor(Math.random() * 16)];
-                        }
-                        return color;
-                    }
-                    
-
-                    $(document).ready(function () {
-
-                       $("#skinn").addClass((arr[idx]));
-                       $("#cw").css("background-image", "linear-gradient(45deg, " + getRandomColor() +" ,  " + getRandomColor() +"," + getRandomColor()+")");
-
-                    });         */
-                </script>
             </div>
-            <!-- Main Footer -->
-            <footer class="main-footer">
-                <!-- To the right -->
-                <div class="pull-right hidden-xs">
-                </div>
-                <!-- Default to the left -->
-                <strong> &copy; @DateTime.Now.Year <a href="https://www.rheinmetall-automotive.com/marken/pierburg/">Pierburg</a>.</strong> All rights reserved.
-            </footer>
+
+            @Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/bootstrap")
+            <script src="~/Scripts/adminlte.js"></script>
+
+            @RenderSection("scripts", required: false)
+
+            <script>
+                                       /*
+                                    //For fun: generate random background color and skins
+
+                                    var arr = ['skin-blue', 'skin-blue-light', 'skin-yellow', 'skin-yellow-light', 'skin-green',
+                                        'skin-green-light', 'skin-purple', 'skin-purple-light', 'skin-red', 'skin-red-light',
+                                        'skin-black', 'skin-black-light'];
+
+                                    var idx = Math.floor(Math.random() * arr.length);
+
+                                    function getRandomColor() {
+                                        var letters = '0123456789ABCDEF';
+                                        var color = '#';
+                                        for (var i = 0; i < 6; i++) {
+                                            color += letters[Math.floor(Math.random() * 16)];
+                                        }
+                                        return color;
+                                    }
+
+
+                                    $(document).ready(function () {
+
+                                       $("#skinn").addClass((arr[idx]));
+                                       $("#cw").css("background-image", "linear-gradient(45deg, " + getRandomColor() +" ,  " + getRandomColor() +"," + getRandomColor()+")");
+
+                                    });         */
+            </script>
         </div>
+        <!-- Main Footer -->
+        <footer class="box-footer" style="background-color:#3c8dbc">
+            <div class="pull-right">
+                <!-- To the right -->
+                <strong> &copy; @DateTime.Now.Year <a style="color:aliceblue" href="https://www.rheinmetall-automotive.com/marken/pierburg/">Pierburg</a>.</strong> All rights reserved.
+                <!-- Default to the left -->
+            </div>
+        </footer>
+    </div>
     </body>
 </html>
     
