--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Edit.cshtml
@@ -4,12 +4,13 @@
     <h3>Mitarbeiter*In bearbeiten</h3>
 
     Klicke @Html.ActionLink("hier", "Details", "Mitarbeiter", new { id = Model.ID }, null)
-    für die Übersicht der Schichten von @Model.Vorname @Model.Nachname:
+    für die Übersicht aller Schichten von @Model.Vorname @Model.Nachname
+    <br />
     <div class="col-md-offset-2 col-md-8">
 
     </div>
 
-    <div class="box box-info">
+    <div class="box">
         <div class="box-body">
             <div class="form-horizontal">
 
