--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.ViewModel.MitarbeiterInschichtViewModel.MitarbeiterInschichtViewModel>
 
 @Styles.Render("~/bundles/tablePluginStyleBundle")
+<link rel="stylesheet" href="~/Content/dist/css/skins/_all-skins.min.css">
+
 
 <title>
     @ViewBag.Title
@@ -13,6 +15,8 @@
                 <h4>
                     Für ältere Einträge besuche das @Html.ActionLink("Archiv", "ArchivMontage", "MitarbeiterInSchicht").
                 </h4>
+
+
 
                 <div class="row row-list" style="padding-bottom: 25px; padding-top: 15px">
                     <div class="col-lg-3 col-xs-12">
@@ -39,6 +43,8 @@
                         @Html.Raw((String)ViewBag.AnlageFilter)
                     </div>
                 </div>
+                <div id="LoadingImage" class="loader"></div>
+
                 <div style="height:100%">
                     <table id="myTable" class="table table-striped table-bordered" style="text-align:center; width:100%">
                         <thead>
@@ -80,12 +86,14 @@
                                     @Html.DisplayNameFor(model => model.Bemerkung)
                                 </th>
                                 <!--
-    <th>
-        @Html.DisplayNameFor(model => model.Auswertung)
-    </th>
-     -->
                                 <th>
+                                    @Html.DisplayNameFor(model => model.Auswertung)
+                                </th>
+                                 -->
+                                <th>
+
                                     @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
+
                                 </th>
                                 <th>
                                 </th>
@@ -94,64 +102,70 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr value="@item.ID" istEingetragen="@item.IstInSAPEingetragen">
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Datum)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Art)
-                                </td>
-                                <td>
-                                    @Html.ActionLink(item.Anlage, "Edit", "Produktionsanlage", new { id = item.ProduktionsanlageID }, new { @style = "color:black" })
-                                </td>
-                                <td>
-                                    @Html.ActionLink(item.Name, "Edit", "Mitarbeiter", new { id = item.MitarbeiterID }, new { @style = "color:black" })
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Personalnummer)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
-                                </td>
-                                <td>
-                                    @Html.ActionLink(item.ZeichenNr, "Edit", "Fertigungsteil", new { id = item.FertigungsteilID }, new { @style = "color:black" })
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Stück)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.InDirStunden)
-                                </td>
-                                <td>
+                                <tr value="@item.ID" istEingetragen="@item.IstInSAPEingetragen"
+                                    @if (item.IstInSAPEingetragen == true) { <text> style="background-color:#90ee90" </text>  } else { <text> style="background-color:#ffcccb" </text> }>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Datum)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Art)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink(item.Anlage, "Edit", "Produktionsanlage", new { id = item.ProduktionsanlageID }, new { @style = "color:black" })
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink(item.Name, "Edit", "Mitarbeiter", new { id = item.MitarbeiterID }, new { @style = "color:black" })
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Personalnummer)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink(item.ZeichenNr, "Edit", "Fertigungsteil", new { id = item.FertigungsteilID }, new { @style = "color:black" })
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Stück)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DirStunden)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.InDirStunden)
+                                    </td>
+                                    <td>
 
-                                    @Html.DisplayFor(modelItem => item.Bemerkung)
-                                </td>
-                                <td>
-                                    <input type="checkbox" href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
-                                </td>
-                                <!--
-    <td>
-        @Html.DisplayFor(modelItem => item.Auswertung)%
-    </td>
-    -->
-                                <td>
+                                        @Html.DisplayFor(modelItem => item.Bemerkung)
+                                    </td>
+                                    <td>
+                                        <input type="checkbox" @if (item.IstInSAPEingetragen == true) { <text> checked</text> }
+                                    else {
+                                        <text>unchecked</text>
+                                    }
+                                               href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
+                                    </td>
 
-                                    <a href="~/MitarbeiterInSchicht/Edit/@item.ID"><span style="color:dimgrey" class="glyphicon glyphicon-edit"></span></a>
+                                    <!--
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Auswertung)%
+                                    </td>
+                                    -->
+                                    <td>
+
+                                        <a href="~/MitarbeiterInSchicht/Edit/@item.ID"><span style="color:dimgrey" class="glyphicon glyphicon-edit"></span></a>
 
 
-                                    <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
-                                    <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey" class="glyphicon glyphicon-remove"></span></a>
+                                        <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
+                                        <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey" class="glyphicon glyphicon-remove"></span></a>
 
-                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen in a text form because the boolean value can't be passed as attribute (dunno why)-->
-                                </td>
+                                        <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen in a text form because the boolean value can't be passed as attribute (dunno why)-->
+                                    </td>
 
-                            </tr>
+                                </tr>
                             }
                         </tbody>
                     </table>
@@ -215,7 +229,7 @@
                 else return true;
             }
         )
-
+        /*
             var table = document.getElementById('myTable');
             // iterate through the whole table and change the color of the row according to the bool value of IstInSAPEingetragen
             var rowLength = table.rows.length;
@@ -235,11 +249,20 @@
                     checkbox.prop("checked", false) // uncheck the checkbox
                     $(row).css("background-color", "#ffcccb"); //red
                 }
-            }
-             // render the Table
-            $(document).ready(function () {
 
-                var table = $('#myTable').DataTable(
+            }
+            */
+             // render the Table
+        $(document).ready(function () {
+
+
+
+
+            $('#LoadingImage').show();
+            $('#myTable').hide();
+                setTimeout(function () {
+
+                    var table = $('#myTable').DataTable(
                     {
                         dom: 'Bfrtlip',
                         buttons: [
@@ -272,17 +295,24 @@
                                 }
                             }
                         ],
-                        "scrollX": false // allow scroll bar (posibly)
-                    });
+                        "scrollX": false, // allow scroll bar (posibly)
+                        "processing": true
+                        });
+
+                    $('#LoadingImage').hide();
+                    $('#myTable').show();
+
+                }, 0);
+
 
                 $('#min, #max, #schicht, #anlageFilter').change(function () { //run the filters
                     table.draw();
                 });
         });
-        
+
         var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
 
-                
+
                 $('[id^=eintragen_]').click(function () { //function for checkboxes, which ID start with eintragen_
 
                     var id = $(this).attr('value'); // get ID
@@ -298,11 +328,11 @@
                         }
                     });
 
-                    if (boolValue == 'True') { 
+                    if (boolValue == 'True') {
                         $(row).css("background-color", "#ffcccb"); //change the color of the row
                         $('#' + id).text('False'); // change the text value of the hidden field istInSAPEingetragen
                     }
-                    else if (boolValue == 'False') { 
+                    else if (boolValue == 'False') {
                         $(row).css("background-color", "#90ee90"); //change the color of the row
                         $('#' + id).text('True'); // change the text value of the hidden field istInSAPEingetragen
                     }
