rename Abrechnungskreis -> Persongruppe remove Mitarbeiterkreis

--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
@@ -25,11 +25,9 @@
                                 @Html.DisplayNameFor(model => model.Vorname)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Abrechnungskreis)
+                                @Html.DisplayNameFor(model => model.Persongruppe)
                             </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Mitarbeiterkreis)
-                            </th>
+
                             <th>
                                 @Html.DisplayNameFor(model => model.Beschäftigungsart)
                             </th>
@@ -61,11 +59,9 @@
                                     @Html.DisplayFor(modelItem => item.Vorname)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Abrechnungskreis)
+                                    @Html.DisplayFor(modelItem => item.Persongruppe)
                                 </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Mitarbeiterkreis)
-                                </td>
+;
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Beschäftigungsart)
                                 </td>
