--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
@@ -46,20 +46,13 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Abrechnungskreis, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Persongruppe, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Abrechnungskreis, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Abrechnungskreis, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Persongruppe, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Persongruppe, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Mitarbeiterkreis, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Mitarbeiterkreis, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Mitarbeiterkreis, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
 
                 <div class="form-group">
